WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114827
Network Process crashing trying to read in IDNScriptWhiteList.txt
https://bugs.webkit.org/show_bug.cgi?id=114827
Summary
Network Process crashing trying to read in IDNScriptWhiteList.txt
Sam Weinig
Reported
2013-04-18 13:25:33 PDT
Network Process crashing trying to read in IDNScriptWhiteList.txt
Attachments
Patch
(11.64 KB, patch)
2013-04-18 13:27 PDT
,
Sam Weinig
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2013-04-18 13:27:11 PDT
Created
attachment 198758
[details]
Patch
Sam Weinig
Comment 2
2013-04-18 15:33:05 PDT
Committed
r148708
: <
http://trac.webkit.org/changeset/148708
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug