Network Process crashing trying to read in IDNScriptWhiteList.txt https://bugs.webkit.org/show_bug.cgi?id=114827

Reviewed by Anders Carlsson.

Move IDNScriptWhiteList.txt from WebKit to WebCore, so that the NetworkProcess does not have to link against
WebKit. It was a layering violation for WebCore to be trying to access WebKit resources anyway.

Source/WebCore:

* Resources/IDNScriptWhiteList.txt: Copied from Source/WebKit/mac/Resources/IDNScriptWhiteList.txt.
* WebCore.xcodeproj/project.pbxproj:
* platform/mac/WebCoreNSURLExtras.mm:
(WebCore::readIDNScriptWhiteList):

Source/WebKit:

* WebKit.xcodeproj/project.pbxproj:

Source/WebKit/mac:

* Resources/IDNScriptWhiteList.txt: Removed.


Canonical link: https://commits.webkit.org/133224@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148708 268f45cc-cd09-0410-ab3c-d52691b4dbfc